--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2608,107 +2608,107 @@ stories:
   domain: http://www.lacrossetribune.com/
   link: https://lacrossetribune.com/news/national/new-holding-center-for-migrant-children-opens-in-texas/image_c0d0d74c-1229-551e-b491-590a9c95d802.html
 images:
-- name: amusement-park-amusement-park-2-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-china-prop.jpg
-- name: oldtrain-oldtrain-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-mucha-mult.jpg
-- name: oldcabin-store-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-umberto-bocc.jpg
-- name: cargo-ship-cargo-ship-on-sea-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-color.jpg
-- name: downtown-los-angeles-downtown-la-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-gan-vogh.JPG
-- name: old-barn-old-barn-1500-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-electricity.jpg
-- name: blossombar-gan-vogh-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-00-00.jpg
-- name: fence-mexico-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
-- name: aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-- name: abandonedbuildings_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smooth_ride.jpg
-- name: windowmountain-window-mountain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
-- name: oldcabin-oldcabin-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-far-away.jpg
-- name: christianity-christianity-under-construction-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-light-dali.jpg
-- name: server-cloud-server-racks-door-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
-- name: old-door-lock-old-door-lock-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-paper.jpg
-- name: long-factory-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-leaflets-of-the-russian-revolution.jpg
-- name: old-school-house-old-schoolhouse-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dry-skin.jpg
-- name: bluelake-blue-brush-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-38-67.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-- name: catacombs-catacombs-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-satan-red.jpg
-- name: oldhotel-oldhotel-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-spagetti-accident.jpg
-- name: oldhouse-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-post-modern.jpg
-- name: berlinwall-DSC-0084-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-granite.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
-- name: lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
-- name: miamibeach-miamibeach-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alien-goggles.jpg
-- name: stories-adam-smith-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-feed-people.jpg
-- name: white-house-lawn-white-house-lawn-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
-- name: trucksilo-trucksilo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-paper.jpg
-- name: bluelake-purp-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purp-paper-file-00-00-00-00.jpg
-- name: subway-subway-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-wols.jpg
-- name: border-crossing-bordercrossing-dali-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dali-two.png
-- name: bordercrossing-bordercrossing-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-color.jpg
-- name: school-clouds-church-clouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-nazi-poster.jpg
-- name: oldtrain-oldtrain-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-green-zuma.jpg
-- name: downtheline-downtheline-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-dali.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-feed-people.jpg
-- name: border-crossing-bordercrossing-smooth-ride.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-smooth-ride.png
-- name: machine-road-machine-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-cinnamon-rolls.jpg
-- name: miamibeach-miamibeach-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-kandinsky-bv.jpg
-- name: christianity-christianity-under-construction-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-china-prop.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
-- name: yosemite-yosemite-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-neo-instinct.jpg
-- name: store-on-corner-store-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
-- name: server-cloud-server-racks-clouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-light-dali.jpg
-- name: gypsymosaic-gypsy-eyes-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-space-pizza.jpg
-- name: oldroad-old-road-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-ww2-color.jpg
-- name: dragon-desert-desert-dragon-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-rainbow-festival.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
-- name: containership-containership-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-graham-sutherland.jpg
+- name: crow-crow-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-circuit.jpg
+- name: eduardo-eduardo-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-wols.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
+- name: old-house-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-paper.jpg
+- name: eduardo-eduardo-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-yellow-paper.jpg
+- name: fence-fence-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-electricity.jpg
+- name: old-gas-pumps-oldgaspumps-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit-5.jpg
+- name: mediterranean-mediterranean-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-mucha-mult.jpg
+- name: gypsymosaic-gypsy-eyes-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-sunday.jpg
+- name: oldhouse-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kandinsky-bv.jpg
+- name: miamibeach-miamibeach-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-spagetti-accident.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
+- name: white-house-lawn-white-house-window-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-pond.jpg
+- name: powerlines-power-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-matrix.jpg
+- name: amusement-park-amusement-park-2-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
+- name: supreme-court-supremecourt-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-storm.jpg
+- name: downtheline-downtheline-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colored-circuits.jpg
+- name: ellis-island-ellisisland-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-dali.jpg
+- name: school-clouds-church-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
+- name: hollywood-building-hollywood-building-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-far-away.jpg
+- name: bordercrossing-bordercrossing-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-two.jpg
+- name: curtain-curtain-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dali-two.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colored-circuits.jpg
+- name: crow-crow-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-storm.jpg
+- name: stories-capital-battle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capital-battle-blue-circuit.jpg
+- name: eduardo-eduardo-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-soul.jpg
+- name: docks-docks-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-hot-spicy.jpg
+- name: supreme-court-supremecourt-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smooth-ride.jpg
+- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
+- name: crow-crow-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-soul.jpg
+- name: aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+- name: window-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
+- name: old-church-oldchurch-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
+- name: birdhouse-birdhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
+- name: catacombs-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-3.jpg
+- name: liberty-back-statue-liberty-back-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-dream.jpg
+- name: berlinwall-DSC-0084-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crafty-painting.jpg
+- name: school-clouds-church-clouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kand-two.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
+- name: old-granary-field-granaryfield-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-matrix.jpg
+- name: downtown-trucksilo-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-electricity.jpg
+- name: power-lines-power-lines-empty-space-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-umberto-bocc.jpg
+- name: school-clouds-church-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-aqua.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-aqua.JPG
+- name: meadowbutterfly-meadow-butterfly-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-storm.jpg
+- name: downtheline-downtheline-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-brush.jpg
+- name: old-granary-field-granaryfield-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-monet-one.jpg
 ---
 Collaborative Brewing Joins Mad River Taste Week.&nbsp;California Ranks As One Of The Worst States To Retire, Report Says.&nbsp;Three Arrests, Large Quantity Of Heroin Seized In South End.&nbsp;Lawmakers Consider Facial Recognition Technology Oversight.&nbsp;Snohomish Announces Movies In The Park Lineup.&nbsp;Fans Celebrate World Cup Champs, Rally For Equal Pay.&nbsp;Moorhead Woman Accused Of Selling Meth In Becker County.&nbsp;Minnesota United Working To Sign Finnish Midfielder Robin Lod.&nbsp;
